src/test/deca/syntax/invalid/test14_decl_inst.deca
// Description:
//    Programme testant un flottant invalide.
//	  Etape(s) : A et B
// 	  Lexicalement : OUI
//	  Syntaxiquement : NON
//
// Resultats:
//	  test_lex : pas d'erreur
//    test_synt : erreur ligne 17 : les declarations doivent avoir lieu 
//		avant les instructions : no viable alternative at input 'x'
//
// Historique:
//    cree le 10/01/2021

{
	print(1.2e12);
	int x = 3;
}
